25 Jun 2003 mipsator
 * updated pmk man page.

24 Jun 2003 mipsator
 * added uabspath() in pathtools.
 * added -b option to set basedir.
 * moved pmkfile path in gdata.
 * related misc ...

22 Jun 2003 mipsator
 * added missing snapshots in Changelog.
 * fixed a bug in chkpath().
 * finished (??) to implement srcdir and builddir stuff.
 * now templates are relative to the path of pmkfile.
 * files created from templates are now relative to basedir.
 * modified Makefile to respect basedir.

# snapshot 0.4.5

21 Jun 2003 mipsator
 * added pathtools.c and pathtools.h files.
 * moved relpath() into pathtools.
 * added chkpath() into pathtools.
 * added path_test.c in test directory.
 * added abspath() into pathtools.
 * more support for srcdir and builddir stuff :
 	* added ac_clean_dyn_var().
	* rewritten ac_process_dyn_var().
	* process_template() now process dynamic variables.
	* updated sample makefile to use srcdir and builddir stuff.
 * fixed remaining <string.h> to "compat/string.h".
 * added BONUS file to talk about reusable components of this package.

18 Jun 2003 mipsator
 * added relpath() to common.

11 Jun 2003 mipsator
 * added srcdir in gdata structure.
 * modified hash_append() to avoid adding separator to an empty string.
 * added init of CFLAGS and LIBS.
 * empty binary path in pmk_check_binary() when not found this avoiding
	remaining tags after parsing.
 * added code to set srcdir and basedir.

# snapshot 0.4.4

10 Jun 2003 mipsator
 * updated TODO
 * modified behavior of pmk_check_binary().
 * added support for alternative CFLAGS and CLIBS in pmk_check_config()
	and pmk_check_pkg_config().
 * updated pmkfile and makefile samples to use new features.
 * fixed pmk_check_config() and pmk_check_pkg_config() to avoid display
 	of error messages.
 * updated TODO and STATUS

08 Jun 2003 mipsator
 * added support for pkg-config with CHECK_PKG_CONFIG.
 	(added pmk_check_pkg_configi() in func)
 * made version optional in CHECK_CONFIG.