@@ -5,7 +5,7 @@ pmk :
 ~ finish pmk(1)
 ~ pmkfile(5)
 ~ compatibility with autoconf (progressing)
-- add an option to read additional arguments from a file
+~ add an option to read additional arguments from a file
 ~ add an option to specify basedir (~builddir)
 
 pmksetup :
